# nsot

./: .bowerrc  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README  README.auth.rst  README.md  README.rst  TODO.md  Vagrantfile  alembic.ini  bower.json  bump.sh  gulpfile.js  iftypes.txt  mkdocs.yml  npm-shrinkwrap.json  package.json  pip-selfcheck.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  runtests  setup.cfg  setup.py
alembic/: env.py
config/: dev.yaml
demo/: README.rst  demo_settings.py  production.sh  run_demo.sh
docker/: Dockerfile  Dockerfile.sub  README.md
docker/conf/: nsot.conf.py
docs/: .ass  Makefile  NSoT-CentOS-Install.rst  NSoT-Fedora-Install.rst  NSoT-SuSe-Install.rst  NSoT-Ubuntu-Install.rst  admin.rst  ansible.rst  api-ref.rst  api.rst  changelog.rst  conf.py  config.rst  development.rst  docker.rst  dockerfile.rst  index.rst  install.rst  installation.rst  intro.rst  models.rst  nsot-centos-vagrant.rst  nsot-debian-vagrant.rst  nsot-fedora-vagrant.rst  nsot-mac-python.rst  nsot-suse-vagrant.rst  nsot-ubuntu-vagrant.rst  nsot-vagrant.rst  quickstart.rst  requirements.rst  support.rst  tutorial.rst  usage.rst  vagrant.rst
docs/api/: index.rst  python.rst  rest.rst
docs/install/: centos.rst  docker.rst  fedora.rst  macosx.rst  suse.rst  ubuntu.rst
docs/vagrant/: centos.rst  debian.rst  fedora.rst  suse.rst  ubuntu.rst
nsot/: __init__.py  admin.py  app.py  apps.py  constants.py  decorators.py  exc.py  fields.py  meta.py  models.py  permissions.py  routes.py  settings.py  util.py  validators.py  version.py  wsgi.py
nsot/api/: auth.py  filters.py  pagination.py  renderers.py  routers.py  serializers.py  urls.py  views.py
nsot/conf/: settings.py  urls.py
nsot/handlers/: api.py  fe.py  util.py
nsot/management/commands/: generate_key.py  start.py  upgrade.py  user_proxy.py
nsot/middleware/: auth.py  request_logging.py  xforwardfor.py
nsot/migrations/: 0001_initial.py  0002_auto_20150810_1718.py  0003_auto_20150810_1751.py  0004_auto_20150810_1806.py  0005_auto_20150810_1847.py  0006_auto_20150810_1947.py  0007_auto_20150811_1201.py  0008_auto_20150811_1222.py  0009_auto_20150811_1245.py  0010_auto_20150921_2120.py  0011_auto_20150930_1557.py  0012_auto_20151002_1427.py  0013_auto_20151002_1443.py  0014_auto_20151002_1653.py  0015_move_attribute_fields.py  0016_move_device_data.py  0017_move_network_data.py  0018_move_interface_data.py  0019_move_assignment_data.py  0020_move_value_data.py  0021_remove_resource_object.py  0022_auto_20151007_1847.py  0023_auto_20151008_1351.py  0024_network_state.py  0025_value_site.py  0026_auto_20160907_1122.py  0026_auto_20160920_1209.py  0026_model_field_verbose_names.py  0027_auto_20160907_1433.py  0027_auto_20160925_1135.py  0027_interface_device_hostname.py  0027_site_parent.py  0028_auto_20161004_0830.py  0028_itervalue.py  0028_populate_interface_device_hostname.py  0029_auto_20160909_1320.py  0029_auto_20161005_1445.py  0029_auto__add_circuit.py  0029_site_parent.py  0030_add_circuit_name_slug.py  (+17 more)
nsot/migrations/versions/: 191ce677f683_.py  2693d64d08b6_.py  5678f0574a6d_.py  b2c67ee9c49_.py  e3cd3d62ff_.py  e648e9e1adb_.py
nsot/models/: __init__.py  assignment.py  attribute.py  change.py  circuit.py  constants.py  device.py  interface.py  network.py  protocol.py  protocol_type.py  resource.py  site.py  user.py  value.py
nsot/services/: http.py
nsot/static/css/: nsot.css
nsot/static/images/halftone/: readme.txt
nsot/static/js/: app.js  controllers.js  directives.js  filters.js  nsot.js  services.js
nsot/static/src/js/: app.js  controllers.js  directives.js  nsot.js  services.js
nsot/static/src/style/: nsot.css
nsot/static/src/templates/: attribute.html  attributes.html  changes.html  interface.html  interfaces.html  iterable.html  iterables.html  network.html  networks.html  site.html
nsot/static/templates/: attribute.html  attributes.html  change.html  changes.html  device.html  devices.html  index.html  network-attribute.html  network-attributes.html  network.html  networks.html  site.html  sites.html  user.html  users.html
nsot/static/templates/directives/: loading-panel.html  nsot-modal.html  paginator.html
nsot/static/templates/includes/: attributes-form.html  networks-form.html
nsot/templates/: app.html  error.html
nsot/templates/rest_framework/: api.html  login.html
nsot/templates/ui/: app.html  error.html  media.html  menu.html  scripts.html
nsot/ui/: context_processors.py  views.py
nsot/util/: __init__.py  cache.py  commands.py  core.py  stats.py
tests/: benchmarks.py  conftest.py  fixtures.py  test_network_attributes.py  test_networks.py  test_settings.py  test_sites.py  test_util.py  util.py
tests/api/: test_auth.py  test_sites.py
tests/api_tests/: conftest.py  fixtures.py  test_attributes.py  test_auth.py  test_circuits.py  test_devices.py  test_interfaces.py  test_iterable.py  test_iterables.py  test_itervalues.py  test_network_attributes.py  test_networks.py  test_permissions.py  test_protocols.py  test_regressions.py  test_sites.py  test_user.py  test_util.py  test_values.py  test_xforwardfor.py  util.py
tests/api_tests/data/: attributes.json  devices.json  networks.json
tests/model_tests/: fixtures.py  test_attributes.py  test_changes.py  test_circuits.py  test_devices.py  test_interfaces.py  test_iterables.py  test_itervalues.py  test_middleware_auth.py  test_network_attributes.py  test_networks.py  test_permissions.py  test_protocols.py  test_regressions.py  test_sites.py  test_values.py
tests/model_tests/data/: networks.json
tests/models/: test_networks.py
vagrant/: README.rst  Vagrantfile  index.html
vagrant-files/centos/: README.rst  Vagrantfile
vagrant-files/debian/: README.rst  Vagrantfile
vagrant-files/fedora/: README.rst
vagrant-files/suse/: README.rst
vagrant-files/ubuntu/: README.rst  Vagrantfile
vagrant/centos/: README.rst
vagrant/debian/: README.rst
vagrant/fedora/: README.rst  Vagrantfile
vagrant/suse/: README.rst  Vagrantfile
vagrant/ubuntu/: README.rst
(+21 files in other folders)
