[tool]
[tool.poetry]
name = "nsot"
version = "2.0.0"
description = "Network Source of Truth (IP Address Management)."
license = "Apache"
classifiers = [
    "Programming Language :: Python", "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
homepage = "https://github.com/dropbox/nsot"
authors = [
    "Jathan McCollum <jathan@gmail.com>",
    "Gary M. Josack <gary@dropbox.com>"
]
include = [
    "README.md",
    "setup.cfg",
    "tests/**/*",
    "nsot/templates/**/*",
    "nsot/static/build/**/*",
]
exclude = [
    "tests/**/*.pyc",
]

[tool.poetry.scripts]
nsot-server = "nsot.util:main"
snot-server = "nsot.util:main"

[tool.poetry.dependencies]
python = ">=3.6"
"backports.ssl-match-hostname" = "==3.4.*,>=3.4.0"
certifi = "==2018.1.*,>=2018.1.18"
cffi = "<2.0.0,>=1.4.1"
coreapi = "==2.3.*,>=2.3.3"
coreschema = "==0.0.*,>=0.0.4"
cryptography = "==2.*,>=2.8.0"
dj-static = "==0.0.*,>=0.0.6"
django = "==1.11.*,>=1.11.11"
django-custom-user = "==0.7.*,>=0.7.0"
django-extensions = "2.2.9"
django-filter = "==1.1.*,>=1.1.0"
django-guardian = "==1.4.*,>=1.4.9"
django-jinja = "==2.4.*,>=2.4.1"
django-macaddress = "==1.4.*,>=1.4.1"
django-rest-swagger = "==2.1.*,>=2.1.2"
djangorestframework = "==3.7.*,>=3.7.7"
djangorestframework-bulk = "==0.2.*,>=0.2.1"
drf-extensions = "==0.3.*,>=0.3.1"
drf-nested-routers = "==0.11.*,>=0.11.1"
gevent = "==1.4.*,>=1.4.0"
greenlet = "==0.4.*,>=0.4.9"
gunicorn = "==19.5.*,>=19.5.0"
idna = "==2.6.*,>=2.6.0"
ipaddress = "==1.0.*,>=1.0.14"
ipython = "==3.1.*,>=3.1.0"
itypes = "==1.1.*,>=1.1.0"
jinja2 = "==2.8.*,>=2.8.0"
logan = "==0.7.*,>=0.7.2"
markupsafe = "==0.23.*,>=0.23.0"
netaddr = "==0.7.*,>=0.7.18"
openapi-codec = "==1.3.*,>=1.3.2"
pyasn1 = "==0.1.*,>=0.1.9"
pycparser = "==2.14.*,>=2.14.0"
requests = "==2.20.*,>=2.20.0"
simplejson = "==3.13.*,>=3.13.2"
six = "==1.10.*,>=1.10.0"
static3 = "==0.6.*,>=0.6.1"
typing = "==3.6.*,>=3.6.4"
uritemplate = "==3.0.*,>=3.0.0"
importlib_metadata = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "~=3.4.1"
pytest-django = "~=3.1.2"
pytest-pythonpath = "~=0.6.0"
PyYAML = "~=5.1"
Sphinx = "~=1.3.6"
sphinx-autobuild = "~=0.6.0"
sphinx-rtd-theme = "~=0.1.9"
ipdb = "~=0.9.3"
flake8 = "^3.3.0"
attrs = "~=17.4.0"
mrproxy = "~=0.4.0"
black = "^20.8b1"

[tool.black]
line-length = 79
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | nsot/migrations
  )/
)
'''
