[tool]
[tool.poetry]
name = "nsot"
version = "2.0.0"
description = "Network Source of Truth (IP Address Management)."
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python", "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
homepage = "https://github.com/dropbox/nsot"
authors = [
    "Jathan McCollum <jathan@gmail.com>",
    "Gary M. Josack <gary@dropbox.com>"
]
include = [
    "README.md",
    "setup.cfg",
    "tests/**/*",
    "nsot/templates/**/*",
    "nsot/static/build/**/*",
]
exclude = [
    "tests/**/*.pyc",
]

[tool.poetry.scripts]
nsot-server = "nsot.util:main"
snot-server = "nsot.util:main"

[tool.poetry.dependencies]
python = ">=3.6"
"backports.ssl-match-hostname" = "^3.4.0"
cryptography = "~=3.4.7"
dj-static = "==0.0.*,>=0.0.6"
django = "~=3.1.0"
django-custom-user = "==0.7.*,>=0.7.0"
django-extensions = "3.0.9"
django-filter = "^2.0.0"
django-guardian = "^2.3.0"
django-macaddress = "~=1.7.0"
djangorestframework = "~=3.11.0"
djangorestframework-bulk = "==0.2.1"
drf-extensions = "~=0.6.0"
drf-nested-routers = "^0.91.0"
gunicorn = "^20.0.4"
ipython = "==7.16.1"
itypes = "==1.1.*,>=1.1.0"
jinja2 = "^2.11.2"
logan = "~=0.7.2"
markupsafe = "==0.23.*,>=0.23.0"
netaddr = "==0.7.*,>=0.7.18"
requests = "^2.24.0"
six = "~=1.15.0"
static3 = "==0.6.*,>=0.6.1"
importlib_metadata = "^1.7.0"
coreapi = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"
pytest-django = "^3.3.0"
pytest-pythonpath = "~=0.6.0"
PyYAML = "~=5.1"
Sphinx = "~=1.3.6"
sphinx-autobuild = "~=0.6.0"
sphinx-rtd-theme = "~=0.1.9"
ipdb = "~=0.9.3"
flake8 = "^3.3.0"
attrs = "~=17.4.0"
mrproxy = "~=0.4.0"
black = "^20.8b1"

[tool.black]
line-length = 79
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | nsot/migrations
  )/
)
'''
